Next step for Bootstrap 5 migration

--- a/templates/bookingpage/footer.mustache
+++ b/templates/bookingpage/footer.mustache
@@ -48,7 +48,7 @@
             <a class="btn btn-primary continue-button" href="#"
                 data-action="{{continueaction}}"
                 data-href="{{continuelink}}"
-                data-toggle="tab">
+                data-toggle="tab" data-bs-toggle="tab">
                 {{{continuelabel}}}
             </a>
         {{/continuebutton}}
