--- a/templates/option/option_collapsible_open.mustache
+++ b/templates/option/option_collapsible_open.mustache
@@ -34,7 +34,8 @@
       <div class="card-header border-0 p-1" id="{{headerid}}">
           <h5 class="mb-0">
             <span class="btn btn-link"
-              data-toggle="collapse" data-bs-toggle="collapse"
+              data-toggle="collapse"
+              data-bs-toggle="collapse"
               data-target="#{{collapseid}}"
               data-bs-target="#{{collapseid}}"
               aria-expanded="{{expanded}}"
