--- a/templates/bookingpage/prepageinline.mustache
+++ b/templates/bookingpage/prepageinline.mustache
@@ -38,7 +38,8 @@
 </div>
 
 <div class=""
-    data-toggle="collapse" data-bs-toggle="collapse"
+    data-toggle="collapse"
+    data-bs-toggle="collapse"
     data-target="#sbPrePageInline_{{optionid}}_{{uniquid}}"
     data-bs-target="#sbPrePageInline_{{optionid}}_{{uniquid}}"
     aria-expanded="false"
