--- a/templates/recalculateprices.mustache
+++ b/templates/recalculateprices.mustache
@@ -35,7 +35,7 @@
 {{#hascap}}
   <div class="alert alert-danger alert-dismissible fade show" role="alert">
     {{{alertmsg}}}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <button type="button" class="close" data-dismiss="alert" data-bs-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
