--- a/templates/bookingpage/footer.mustache
+++ b/templates/bookingpage/footer.mustache
@@ -34,7 +34,7 @@
 }}
 
 <div class="prepage-booking-footer d-flex w-100 justify-content-between">
-    <span class="back-container mt-2 ml-3">
+    <span class="back-container mt-2 ml-3 ms-3">
         {{#backbutton}}
             <a class="btn btn-primary back-button"
                 data-action="{{backaction}}">
@@ -42,8 +42,8 @@
             </a>
         {{/backbutton}}
     </span>
-
-    <span class="continue-container mt-2 mr-3">
+<div>dbg text</div>
+    <span class="continue-container mt-2 mr-3 me-3">
         {{#continuebutton}}
             <a class="btn btn-primary continue-button" href="#"
                 data-action="{{continueaction}}"
