bs5: remove data-toggle="tab" data-bs-toggle="tab"

--- a/templates/bookingpage/footer.mustache
+++ b/templates/bookingpage/footer.mustache
@@ -42,13 +42,12 @@
             </a>
         {{/backbutton}}
     </span>
-<div>dbg text</div>
+
     <span class="continue-container mt-2 mr-3 me-3">
         {{#continuebutton}}
             <a class="btn btn-primary continue-button" href="#"
                 data-action="{{continueaction}}"
-                data-href="{{continuelink}}"
-                data-toggle="tab" data-bs-toggle="tab">
+                data-href="{{continuelink}}">
                 {{{continuelabel}}}
             </a>
         {{/continuebutton}}
