--- a/templates/table_list_row.mustache
+++ b/templates/table_list_row.mustache
@@ -135,10 +135,10 @@
         {{#headerimage}}
         <div class="mod-booking-view-list-image-container col-md-3">
           {{#value}}
-            <img class="mod-booking-view-list-image rounded-left" src="{{{value}}}" {{#headerimagealt}}alt="{{.}}" title="{{.}}"{{/headerimagealt}}>
+            <img class="mod-booking-view-list-image rounded-left rounded-start" src="{{{value}}}" {{#headerimagealt}}alt="{{.}}" title="{{.}}"{{/headerimagealt}}>
           {{/value}}
           {{^value}}
-            <div class="mod-booking-view-list-image rounded-left w-100 h-100"
+            <div class="mod-booking-view-list-image rounded-left rounded-start w-100 h-100"
               style="background-color: #e6f0f7;
                     opacity: 0.8;
                     background-image: radial-gradient(#45aaf7 0.5px, #e6f0f7 0.5px);
@@ -270,10 +270,10 @@
             </div></div></div>
             <div class="mod-booking-view-list-image-container col-md-3 pr-0 pl-5">
               {{#value}}
-                <img class="mod-booking-view-list-image rounded-right" src="{{{value}}}" {{#headerimagealt}}alt="{{.}}" title="{{.}}"{{/headerimagealt}}>
+                <img class="mod-booking-view-list-image rounded-right rounded-end" src="{{{value}}}" {{#headerimagealt}}alt="{{.}}" title="{{.}}"{{/headerimagealt}}>
               {{/value}}
               {{^value}}
-                <div class="mod-booking-view-list-image rounded-right w-100 h-100"
+                <div class="mod-booking-view-list-image rounded-right rounded-end w-100 h-100"
                   style="background-color: #e6f0f7;
                         opacity: 0.8;
                         background-image: radial-gradient(#45aaf7 0.5px, #e6f0f7 0.5px);
