--- a/templates/booked_users.mustache
+++ b/templates/booked_users.mustache
@@ -117,4 +117,18 @@
             </div>
         </div>
     {{/bookinghistory}}
+    {{#optionstoconfirm}}
+        <div class="card">
+            <div class="card-header bg-transparent" id="accordion-heading-optionstoconfirm">
+                <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-optionstoconfirm" aria-expanded="false" aria-controls="accordion-item-optionstoconfirm">
+                    <i class="fa fa-fw fa-hourglass" aria-hidden="true"></i>&nbsp;{{#str}} optionstoconfirm, mod_booking {{/str}}
+                </div>
+            </div>
+            <div id="accordion-item-optionstoconfirm" class="collapse" aria-labelledby="accordion-heading-optionstoconfirm" data-parent="#accordion-usertables">
+            <div class="card-body p-0">
+                {{{optionstoconfirm}}}
+            </div>
+            </div>
+        </div>
+    {{/optionstoconfirm}}
 </div>
