Update: Add warning when I have a deputy active. Wunderbyte-GmbH/Moodle-local_taskflow#105

--- a/templates/booked_users.mustache
+++ b/templates/booked_users.mustache
@@ -126,6 +126,7 @@
             </div>
             <div id="accordion-item-optionstoconfirm" class="collapse" aria-labelledby="accordion-heading-optionstoconfirm" data-parent="#accordion-usertables">
             <div class="card-body p-0">
+                <div>{{{optionstoconfirmadditionaltexts}}}</div>
                 {{{optionstoconfirm}}}
             </div>
             </div>
