--- a/templates/booked_users.mustache
+++ b/templates/booked_users.mustache
@@ -119,6 +119,17 @@
     {{/bookinghistory}}
     {{#optionstoconfirm}}
         <div class="card">
+            {{#deputyselect}}
+                <div data-region="tf-selectuserformcontainer">
+                        <div class="form-autocomplete-selection w-100" role="listbox" aria-atomic="true" tabindex="0">
+                            <span class="m-1 h-5"></span>
+                        </div>
+                        <div class="form-autocomplete-input d-md-inline-block me-md-2 position-relative">
+                            <input type="text" class="form-control">
+                            <span class="form-autocomplete-downarrow position-absolute p-1">▼</span>
+                        </div>
+                </div>
+            {{/deputyselect}}
             <div class="card-header bg-transparent" id="accordion-heading-optionstoconfirm">
                 <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-optionstoconfirm" aria-expanded="false" aria-controls="accordion-item-optionstoconfirm">
                     <i class="fa fa-fw fa-hourglass" aria-hidden="true"></i>&nbsp;{{#str}} optionstoconfirm, mod_booking {{/str}}
