Bugfix: No line break between price and currency.

--- a/templates/bookit_button.mustache
+++ b/templates/bookit_button.mustache
@@ -84,7 +84,7 @@
             {{/link}}
         {{/main}}
         {{#sub}}
-            <div class="booking-button-subarea h6 mb-1 mt-1 p-1 {{class}}" role="{{role}}">{{{label}}}</div>
+            <div class="booking-button-subarea h6 mb-1 mt-1 p-1 text-nowrap {{class}}" role="{{role}}">{{{label}}}</div>
         {{/sub}}
         {{#showdetaildots}}
             <div class="booking-booked-dots-button p-1">
