--- a/templates/bookit_price.mustache
+++ b/templates/bookit_price.mustache
@@ -52,7 +52,7 @@
         </div>
     {{/top}}
     <div class="pricecontainer mb-2 {{#fullwidth}}w-100{{/fullwidth}}">
-        <span class="pricecurrency h5">
+        <span class="pricecurrency h5 text-nowrap">
             {{#priceformatted}}{{priceformatted}} {{currency}}{{/priceformatted}}
             {{^priceformatted}}{{price}} {{currency}}{{/priceformatted}}
         </span>
