Replace report2option link with optionlink for col_text #1057

--- a/templates/report/option.mustache
+++ b/templates/report/option.mustache
@@ -36,8 +36,7 @@
 <div class="mod-booking-report-option ml-3">
 	<div>
 		<div class="h6 mb-1">
-			<a href="{{report2option}}" title="Report for {{text}}" target="_blank">
-				<i class="fa fa-ticket" aria-hidden="true"></i>&nbsp;
+			<a href="{{optionlink}}" title="Report for {{text}}" target="_blank">
 				{{#text}}{{text}}{{/text}}
 			</a>&nbsp;
 			<a href="{{optionlink}}" title="{{text}}" target="_blank">
