--- a/templates/booked_users.mustache
+++ b/templates/booked_users.mustache
@@ -135,4 +135,18 @@
             </div>
         </div>
     {{/optionstoconfirm}}
+    {{#previouslybooked}}
+        <div class="card">
+            <div class="card-header bg-transparent" id="accordion-heading-previouslybooked">
+                <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-previouslybooked" aria-expanded="false" aria-controls="accordion-item-optionstoconfirm">
+                    <i class="fa fa-fw fa-hourglass" aria-hidden="true"></i>&nbsp;{{#str}} previouselybooked, mod_booking {{/str}}
+                </div>
+            </div>
+            <div id="accordion-item-previouslybooked" class="collapse" aria-labelledby="accordion-heading-previouslybooked" data-parent="#accordion-usertables">
+            <div class="card-body p-0">
+                {{{previouslybooked}}}
+            </div>
+            </div>
+        </div>
+    {{/previouslybooked}}
 </div>
