Update: Make links configurable in bookingtracker_helper to control the view link for the column text in the manageusers_table. #1057

--- a/templates/report/option.mustache
+++ b/templates/report/option.mustache
@@ -36,7 +36,8 @@
 <div class="mod-booking-report-option ml-3">
 	<div>
 		<div class="h6 mb-1">
-			<a href="{{optionlink}}" title="Report for {{text}}" target="_blank">
+			<a href="{{report2option}}" title="Report for {{text}}" target="_blank">
+				{{{texticon}}}
 				{{#text}}{{text}}{{/text}}
 			</a>&nbsp;
 			<a href="{{optionlink}}" title="{{text}}" target="_blank">
