Improvement: Add deputies via select modal Wunderbyte-GmbH/Moodle-local_taskflow#105

--- a/templates/additional_texts.mustache
+++ b/templates/additional_texts.mustache
@@ -41,7 +41,7 @@
 }}
 {{#texts}}
     {{#link}}
-        <a href="{{link}}" class="{{class}}">{{text}}</a>
+        <a href="{{link}}" class="{{class}}">{{text}}</a>{{^last}}, {{/last}}
     {{/link}}
     {{^link}}
         <span class="{{class}}">{{text}}</span>
