--- a/templates/deputyselect.mustache
+++ b/templates/deputyselect.mustache
@@ -22,6 +22,9 @@
 
     Data attributes required for JS:
     * data-region
+
+    Example context (json):
+    {}
 }}
 <button class="btn btn-primary" data-id="booking-booked-users-open-deputy-modal">
     {{#str}} adddeputies, mod_booking {{/str}}
