--- a/templates/booked_users.mustache
+++ b/templates/booked_users.mustache
@@ -37,7 +37,7 @@
         <div class="card">
             <div class="card-header bg-transparent" id="accordion-heading-bookedusers">
                 <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-bookedusers" aria-expanded="true" aria-controls="accordion-item-bookedusers">
-                    <i class="fa fa-fw fa-ticket" aria-hidden="true"></i>&nbsp;{{#str}} bookings, mod_booking {{/str}}
+                    <i class="fa fa-fw fa-ticket" aria-hidden="true"></i>&nbsp;{{#labels.0}}{{.}}{{/labels.0}}
                 </div>
             </div>
             <div id="accordion-item-bookedusers" class="collapse show" aria-labelledby="accordion-heading-bookedusers" data-parent="#accordion-usertables">
@@ -51,7 +51,7 @@
         <div class="card">
             <div class="card-header bg-transparent" id="accordion-heading-waitinglist">
                 <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-waitinglist" aria-expanded="false" aria-controls="accordion-item-waitinglist">
-                    <i class="fa fa-fw fa-hourglass" aria-hidden="true"></i>&nbsp;{{#str}} waitinglist, mod_booking {{/str}}
+                    <i class="fa fa-fw fa-hourglass" aria-hidden="true"></i>&nbsp;{{#labels.1}}{{.}}{{/labels.1}}
                 </div>
             </div>
             <div id="accordion-item-waitinglist" class="collapse" aria-labelledby="accordion-heading-waitinglist" data-parent="#accordion-usertables">
@@ -65,7 +65,7 @@
         <div class="card">
             <div class="card-header bg-transparent" id="accordion-heading-reservedusers">
                 <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-reservedusers" aria-expanded="false" aria-controls="accordion-item-reservedusers">
-                    <i class="fa fa-fw fa-shopping-cart" aria-hidden="true"></i>&nbsp;{{#str}} reservedusers, mod_booking {{/str}}
+                    <i class="fa fa-fw fa-shopping-cart" aria-hidden="true"></i>&nbsp;{{#labels.2}}{{.}}{{/labels.2}}
                 </div>
             </div>
             <div id="accordion-item-reservedusers" class="collapse" aria-labelledby="accordion-heading-reservedusers" data-parent="#accordion-usertables">
@@ -79,7 +79,7 @@
         <div class="card">
             <div class="card-header bg-transparent" id="accordion-heading-userstonotify">
                 <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-userstonotify" aria-expanded="false" aria-controls="accordion-item-userstonotify">
-                    <i class="fa fa-fw fa-bell-o" aria-hidden="true"></i>&nbsp;{{#str}} userstonotify, mod_booking {{/str}}
+                    <i class="fa fa-fw fa-bell-o" aria-hidden="true"></i>&nbsp;{{#labels.3}}{{.}}{{/labels.3}}
                 </div>
             </div>
             <div id="accordion-item-userstonotify" class="collapse" aria-labelledby="accordion-heading-userstonotify" data-parent="#accordion-usertables">
@@ -93,7 +93,7 @@
         <div class="card">
             <div class="card-header bg-transparent" id="accordion-heading-deletedusers">
                 <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-deletedusers" aria-expanded="false" aria-controls="accordion-item-deletedusers">
-                    <i class="fa fa-fw fa-ban" aria-hidden="true"></i>&nbsp;{{#str}} deletedbookings, mod_booking {{/str}}
+                    <i class="fa fa-fw fa-ban" aria-hidden="true"></i>&nbsp;{{#labels.4}}{{.}}{{/labels.4}}
                 </div>
             </div>
             <div id="accordion-item-deletedusers" class="collapse" aria-labelledby="accordion-heading-deletedusers" data-parent="#accordion-usertables">
@@ -107,7 +107,7 @@
         <div class="card">
             <div class="card-header bg-transparent" id="accordion-heading-bookinghistory">
                 <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-bookinghistory" aria-expanded="false" aria-controls="accordion-item-bookinghistory">
-                    <i class="fa fa-history" aria-hidden="true"></i>&nbsp;{{#str}} bookinghistory, mod_booking {{/str}}
+                    <i class="fa fa-history" aria-hidden="true"></i>&nbsp;{{#labels.5}}{{.}}{{/labels.5}}
                 </div>
             </div>
             <div id="accordion-item-bookinghistory" class="collapse" aria-labelledby="accordion-heading-bookinghistory" data-parent="#accordion-usertables">
@@ -127,7 +127,7 @@
             {{/deputydisplay}}
             <div class="card-header bg-transparent" id="accordion-heading-optionstoconfirm">
                 <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-optionstoconfirm" aria-expanded="false" aria-controls="accordion-item-optionstoconfirm">
-                    <i class="fa fa-fw fa-hourglass" aria-hidden="true"></i>&nbsp;{{#str}} optionstoconfirm, mod_booking {{/str}}
+                    <i class="fa fa-fw fa-hourglass" aria-hidden="true"></i>&nbsp;{{#labels.6}}{{.}}{{/labels.6}}
                 </div>
             </div>
             <div id="accordion-item-optionstoconfirm" class="collapse" aria-labelledby="accordion-heading-optionstoconfirm" data-parent="#accordion-usertables">
@@ -141,7 +141,7 @@
         <div class="card">
             <div class="card-header bg-transparent" id="accordion-heading-previouslybooked">
                 <div class="bookingstracker-header" role="button" data-toggle="collapse" data-target="#accordion-item-previouslybooked" aria-expanded="false" aria-controls="accordion-item-optionstoconfirm">
-                    <i class="fa fa-fw fa-hourglass" aria-hidden="true"></i>&nbsp;{{#str}} previouselybooked, mod_booking {{/str}}
+                    <i class="fa fa-fw fa-hourglass" aria-hidden="true"></i>&nbsp;{{#labels.7}}{{.}}{{/labels.7}}
                 </div>
             </div>
             <div id="accordion-item-previouslybooked" class="collapse" aria-labelledby="accordion-heading-previouslybooked" data-parent="#accordion-usertables">
