--- a/styles.css
+++ b/styles.css
@@ -502,7 +502,7 @@ if there only was one booking option. */
 }
 
 .bookinglinkbutton:not(#page-mod-booking-optionview .bookinglinkbutton) {
-    background: var(--primary);
+    background: var(--primary, var(--bs-btn-bg));
     border-radius: 8px;
     color: white;
     text-decoration: none;
