--- a/templates/table_cards.mustache
+++ b/templates/table_cards.mustache
@@ -145,6 +145,7 @@
             {{> mod_booking/table_cards_row }}
          {{/rows}}
       </div>
+      {{> local_wunderbyte_table/component_pagination }}
    {{/table}}
 
    {{#js}}
