GH-1002: Improvement: Set localized language strings

--- a/templates/mobile/ionform/select.mustache
+++ b/templates/mobile/ionform/select.mustache
@@ -9,12 +9,15 @@
 <div>
   <%#myform%>
     <ion-item>
-      <ion-select 
-        aria-label="true" 
+      <ion-select
+        aria-label="true"
         placeholder="<% label %>"
         name="<% name %>"
         value="<% selectedvalue %>"
         [(ngModel)]='CONTENT_OTHERDATA.data["<% name %>"]'
+        [interfaceOptions]="{ header: '<% headertext %>' }"
+        cancelText="<% canceltext %>"
+        okText="<% submissiontext %>"
       >
         <%# values %>
           <ion-select-option value="<% key_select %>"><% value_select %></ion-select-option>
