Debug mode, disclaimer, code clean-up #1188

--- a/templates/scheduledmails_list.mustache
+++ b/templates/scheduledmails_list.mustache
@@ -29,5 +29,6 @@
     }
 }}
 <div data-region="scheduledmails-list">
+    <div class="alert alert-warning">{{#str}} infotext:scheduledmailswarning, mod_booking {{/str}} </div>
     {{{ renderedtable }}}
 </div>
