--- a/templates/scheduledmails_list.mustache
+++ b/templates/scheduledmails_list.mustache
@@ -24,9 +24,11 @@
     * data-region
 
    Example context (json):
-   {
-      "renderedtable": "<table>...</table>",
-    }
+    [
+        {
+            "renderedtable": "<table>...</table>"
+        }
+    ]
 }}
 <div data-region="scheduledmails-list">
     <div class="alert alert-warning">{{#str}} infotext:scheduledmailswarning, mod_booking {{/str}} </div>
