--- a/templates/performance/performance_input.mustache
+++ b/templates/performance/performance_input.mustache
@@ -42,6 +42,18 @@
             {{/autocompleteitems}}
         </datalist>
     </div>
+    <div class="performance-actions d-flex flex-wrap gap-3">
+        {{#actions}}
+            <div class="performance-action border rounded p-3">
+                <div class="action-label fw-bold mb-2">
+                    {{label}}
+                </div>
+                <div class="action-input">
+                    {{{html}}}
+                </div>
+            </div>
+        {{/actions}}
+    </div>
 
     <button
         type="button"
