--- a/templates/bookingoption_description_prepagemodal_bookit.mustache
+++ b/templates/bookingoption_description_prepagemodal_bookit.mustache
@@ -138,7 +138,7 @@
 }}
 
 <p class="m-3">{{#str}} doyouwanttobook, mod_booking, {{{title}}} {{/str}}</p>
-<div class="bookingoption-description-prepagemodal-bookit w-100 ml-3 mr-3 ms-3 me-3 mb-3 mt-1 p-2 text-justify bg-light border border-secondary rounded">
+<div class="bookingoption-description-prepagemodal-bookit w-100 ml-3 mr-3 ms-3 me-3 mb-3 mt-1 p-2 text-justify bg-light border border-secondary rounded text-start">
     <div class="container-fluid">
         <div class="row">
             {{#imageurl}}
