bs5 css: remove deprecated "close" class

--- a/templates/report/allusercertificate_modal.mustache
+++ b/templates/report/allusercertificate_modal.mustache
@@ -53,7 +53,7 @@
 
       <div class="modal-header">
         <h5 class="modal-title">{{title}}</h5>
-        <button type="button" class="close btn-close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="{{#str}} close, mod_booking {{/str}}">
+        <button type="button" class="btn-close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="{{#str}} close, mod_booking {{/str}}">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
