--- a/templates/semesters_holidays.mustache
+++ b/templates/semesters_holidays.mustache
@@ -35,7 +35,7 @@
 }}
 <div class="alert alert-secondary alert-dismissible fade show" role="alert">
   {{#str}} semesterssubtitle, mod_booking {{/str}}
-  <button type="button" class="close btn-close" data-dismiss="alert" data-bs-dismiss="alert" aria-label="Close">
+  <button type="button" class="btn-close" data-dismiss="alert" data-bs-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
