--- a/templates/page_allteachers.mustache
+++ b/templates/page_allteachers.mustache
@@ -92,7 +92,7 @@
                                                 <h5 class="modal-title" id="descriptionlong-modal-title-{{teacherid}}">
                                                     {{#str}} description, mod_booking {{/str}}
                                                 </h5>
-                                                <button type="button" class="close btn-close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
+                                                <button type="button" class="btn-close" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                                                     <span aria-hidden="true">&times;</span>
                                                 </button>
                                             </div>
